--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -2,6 +2,9 @@
 # You don't need to edit this file, it's empty on purpose.
 # Edit theme's home layout instead if you wanna make some changes
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
+title: "Tutorials"
 layout: home
 author_profile: true
 ---
+
+<p style="font-size: 0.625em;"><i>All posts archived by year <a href="{{ site.url }}/tutorials/year-archive">here</a>. All posts archived by tag <a href="{{ site.url }}/tutorials/tag-archive">here</a>.</i></p>
